--- a/src/main/resources/mock/Schedule.html
+++ b/src/main/resources/mock/Schedule.html
@@ -1,11 +1,15 @@
-<!doctype html>
-<html lang="ja">
-  <head>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="ja">
+<head>
+	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>訓練時間表</title>
+	<!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="init.css">
+<!--	<link th:href="@{/init.css}" rel="stylesheet">-->
+
+	<title>訓練時間表</title>
   </head>
   <body>
     <table class="table  table-bordered">
