--- a/src/main/resources/mock/TeacherSchedule.html
+++ b/src/main/resources/mock/TeacherSchedule.html
@@ -1,12 +1,12 @@
-<!doctype html>
-<html lang="ja">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="ja">
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<link rel="stylesheet" href="init.css">
 
 	<title>講師割当アプリケーション[講師スケジュール]</title>
 </head>
@@ -20,9 +20,9 @@
 		<div class="row center-block text-center">
 			<h2><a href= "TeacherSchedule.html" title="前月へ遷移予定。"><</a> 9月 <a href= "TeacherSchedule.html"  title="次月へ遷移予定。">></a></h2>
 		</div>
-		<div  class="row center-block text-center">
+		<div  class="row center-block text-center" id="calendar">
 			<!--div class="col-md"-->
-		<table class="calendar">
+		<table>
 			<tr>
 				<th>日</th>
 				<th>月</th>
@@ -41,7 +41,7 @@
 				<td>1<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
@@ -54,8 +54,8 @@
 				</td>
 			</tr>
 			<tr class="day">
-				<td>3<br>
-					<select>
+				<td class="holiday">3<br>
+					<select  disabled>
 					<option value="1">―</option>
 					<option value="2">〇</option>
 					<option value="3">×</option>
@@ -64,35 +64,35 @@
 				<td>4<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>5<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>6<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>7<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>8<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
@@ -105,8 +105,8 @@
 				</td>
 			</tr>
 			<tr class="day">
-				<td>10<br>
-					<select>
+				<td class="holiday">10<br>
+					<select  disabled>
 					<option value="1">―</option>
 					<option value="2">〇</option>
 					<option value="3">×</option>
@@ -115,35 +115,35 @@
 				<td>11<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>12<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>13<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>14<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>15<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
@@ -156,15 +156,15 @@
 				</td>
 			</tr>
 			<tr class="day">
-				<td>17<br>
-					<select>
+				<td class="holiday">17<br>
+					<select  disabled>
 					<option value="1">―</option>
 					<option value="2">〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
-				<td>18<br>
-					<select>
+				<td class="nholiday">18<br>
+					<select disabled>
 					<option value="1">―</option>
 					<option value="2">〇</option>
 					<option value="3">×</option>
@@ -173,33 +173,33 @@
 				<td>19<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>20<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>21<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>22<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
-				<td>23<br>
-					<select>
+				<td class="nholiday">23<br>
+					<select disabled>
 					<option value="1">―</option>
 					<option value="2">〇</option>
 					<option value="3">×</option>
@@ -207,8 +207,8 @@
 				</td>
 				</tr>
 			<tr class="day">
-				<td>24<br>
-					<select>
+				<td class="holiday">24<br>
+					<select  disabled>
 					<option value="1">―</option>
 					<option value="2">〇</option>
 					<option value="3">×</option>
@@ -217,35 +217,35 @@
 				<td>25<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>26<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>27<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>28<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
 				<td>29<br>
 					<select>
 					<option value="1">―</option>
-					<option value="2">〇</option>
+					<option value="2" selected>〇</option>
 					<option value="3">×</option>
 					</select>
 				</td>
