--- a/src/main/resources/mock/TrainingInfo.html
+++ b/src/main/resources/mock/TrainingInfo.html
@@ -1,12 +1,12 @@
-<!doctype html>
-<html lang="ja">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="ja">
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<link rel="stylesheet" href="init.css">
 
 	<title>講師割当アプリケーション[訓練情報]</title>
 </head>
