--- a/src/main/resources/mock/TrainingList.html
+++ b/src/main/resources/mock/TrainingList.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ja">
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<link rel="stylesheet" href="init.css">
 
 	<title>講師割当アプリケーション [訓練一覧]</title>
-	<link th:href="@{/init.css}" rel="stylesheet">
 </head>
 <body>
 	<div class="list">
@@ -18,35 +17,38 @@
 
 		<div class="row">
 			<div class="col-md">
-
 				<table class="table table-striped table-hover">
 					<thead class="thead-dark">
 						<tr>
 							<th colspan="2" scope="col">訓練名</th>
+							<th scope="col">訓練期間</th>
 							<th>
-								<button type="submit" id="update_button" class="btn btn-primary btn-sm" onclick="location.href='./TrainingInfo.html'">新規作成</button>
+								<button type="submit" id="new_button" class="btn btn-primary btn-sm" onclick="location.href='./TrainingInfo.html'">新規作成</button>
 							</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td>00001</td>
-							<td><a href= "Schedule.html">〇〇〇初級科</a></td>
+							<td><a href= "Schedule.html">〇〇〇初級科</a><span class="badge bg-danger">講師未割当</span></td>
+							<td>yyyy/MM/dd(E) ～ yyyy/MM/dd(E)</td>
 							<td>
-								<button type="submit" id="update_button" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TrainingInfo.html'">編集</button>
-								<button type="submit" id="delete_Button" class="btn btn-outline-secondary btn-sm">削除</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TrainingInfo.html'">編集</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm">削除</button>
 							</td>
 						<tr>
 							<td>00002</td>
 							<td><a href= "Schedule.html" >〇〇〇中級科</a></td>
+							<td>yyyy/MM/dd(E) ～ yyyy/MM/dd(E)</td>
 							<td>
-								<button type="submit" id="update_button" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TrainingInfo.html'">編集</button>
-								<button type="submit" id="delete_Button" class="btn btn-outline-secondary btn-sm">削除</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TrainingInfo.html'">編集</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm">削除</button>
 							</td>
 						</tr>
 						<tr>
 							<td>00003</td>
 							<td><a href= "Schedule.html" >〇〇〇上級科</a></td>
+							<td>yyyy/MM/dd(E) ～ yyyy/MM/dd(E)</td>
 							<td>
 								<button type="submit" id="update_button" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TrainingInfo.html'">編集</button>
 								<button type="submit" id="delete_Button" class="btn btn-outline-secondary btn-sm">削除</button>
@@ -57,10 +59,8 @@
 			</div>
 		</div>
 	</div>
-
-
+<br>
 <a href= "TeacherList.html" >講師一覧へ</a>
-
 <!-- Optional JavaScript; choose one of the two! -->
 
 	<!-- Option 1: Bootstrap Bundle with Popper -->
