--- a/src/main/resources/mock/TrainingSchedule.html
+++ b/src/main/resources/mock/TrainingSchedule.html
@@ -1,12 +1,12 @@
-<!doctype html>
-<html lang="ja">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="ja">
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<link rel="stylesheet" href="init.css">
 
 	<title>講師割当アプリケーション[訓練スケジュール]</title>
 </head>
@@ -20,9 +20,9 @@
 		<div class="row center-block text-center">
 			<h2><a href= "TrainingSchedule.html" title="前月へ遷移予定。"><</a> 9月 <a href= "TrainingSchedule.html"  title="次月へ遷移予定。">></a></h2>
 		</div>
-		<div  class="row center-block text-center">
+		<div  class="row center-block text-center" id="calendar">
 			<!--div class="col-md"-->
-		<table class="calendar">
+			<table>
 			<tr>
 				<th>日</th>
 				<th>月</th>
@@ -45,7 +45,7 @@
 					<input type="text" class="form-control" style="width:40px" placeholder="0" />
 			</tr>
 			<tr class="day">
-				<td>3<br>
+				<td class="holiday">3<br>
 					<input type="text" class="form-control" style="width:40px" placeholder="0" />
 				</td>
 				<td>4<br>
@@ -68,7 +68,7 @@
 				</td>
 			</tr>
 			<tr class="day">
-				<td>10<br>
+				<td class="holiday">10<br>
 					<input type="text" class="form-control" style="width:40px" placeholder="0" />
 				</td>
 				<td>11<br>
@@ -91,10 +91,10 @@
 				</td>
 			</tr>
 			<tr class="day">
-				<td>17<br>
+				<td class="holiday">17<br>
 					<input type="text" class="form-control" style="width:40px" placeholder="0" />
 				</td>
-				<td>18<br>
+				<td class="nholiday">18<br>
 					<input type="text" class="form-control" style="width:40px" placeholder="6" />
 				</td>
 				<td>19<br>
@@ -109,12 +109,12 @@
 				<td>22<br>
 					<input type="text" class="form-control" style="width:40px" placeholder="6" />
 				</td>
-				<td>23<br>
+				<td class="nholiday">23<br>
 					<input type="text" class="form-control" style="width:40px" placeholder="0" />
 				</td>
 				</tr>
 			<tr class="day">
-				<td>24<br>
+				<td class="holiday">24<br>
 					<input type="text" class="form-control" style="width:40px" placeholder="0" />
 				</td>
 				<td>25<br>
