mock修正 ・Training/TeacherSceduleの表示修正2

--- a/src/main/resources/mock/TeacherSchedule.html
+++ b/src/main/resources/mock/TeacherSchedule.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<div class="border col-5">
+	<div class="col-6">
 		<br>
 		<h4>講師スケジュール</h4>
 		<br>
@@ -45,7 +45,7 @@
 					<option value="3">×</option>
 					</select>
 				</td>
-				<td>2<br>
+				<td class="holiday">2<br>
 					<select>
 					<option value="1">―</option>
 					<option value="2">〇</option>
@@ -96,7 +96,7 @@
 					<option value="3">×</option>
 					</select>
 				</td>
-				<td>9<br>
+				<td class="holiday">9<br>
 					<select>
 					<option value="1">―</option>
 					<option value="2">〇</option>
@@ -147,7 +147,7 @@
 					<option value="3">×</option>
 					</select>
 				</td>
-				<td>16<br>
+				<td class="holiday">16<br>
 					<select>
 					<option value="1">―</option>
 					<option value="2">〇</option>
@@ -249,7 +249,7 @@
 					<option value="3">×</option>
 					</select>
 				</td>
-				<td>30<br>
+				<td class="holiday">30<br>
 					<select>
 					<option value="1">―</option>
 					<option value="2">〇</option>
