--- a/src/main/resources/mock/TrainingSchedule.html
+++ b/src/main/resources/mock/TrainingSchedule.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<div class="border col-5">
+	<div class="col-6">
 		<br>
 		<h4>訓練スケジュール</h4>
 		<br>
@@ -39,101 +39,101 @@
 				<td></td>
 				<td></td>
 				<td>1<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
-				<td>2<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+				<td class="holiday">2<br>
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 			</tr>
 			<tr class="day">
 				<td class="holiday">3<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 				</td>
 				<td>4<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>5<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>6<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>7<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>8<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
-				<td>9<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+				<td class="holiday">9<br>
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 				</td>
 			</tr>
 			<tr class="day">
 				<td class="holiday">10<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 				</td>
 				<td>11<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>12<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>13<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>14<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>15<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
-				<td>16<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+				<td class="holiday">16<br>
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 				</td>
 			</tr>
 			<tr class="day">
 				<td class="holiday">17<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 				</td>
 				<td class="nholiday">18<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>19<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>20<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>21<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>22<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td class="nholiday">23<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 				</td>
 				</tr>
 			<tr class="day">
 				<td class="holiday">24<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 				</td>
 				<td>25<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>26<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>27<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>28<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
 				<td>29<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
 				</td>
-				<td>30<br>
-					<input type="text" class="form-control" style="width:40px" placeholder="0" />
+				<td class="holiday">30<br>
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
 				</td>
 			</tr>
 		</table>
