--- a/src/main/resources/mock/TeacherList.html
+++ b/src/main/resources/mock/TeacherList.html
@@ -23,7 +23,7 @@
 						<tr>
 							<th colspan="2" scope="col">講師名</th>
 							<th>
-								<button type="submit" id="update_button" class="btn btn-primary btn-sm"  onclick="location.href='./TeacherInfo.html'">新規作成</button>
+								<button type="submit" id="update_button" class="btn btn-primary btn-sm" onclick="location.href='./TeacherInfo.html'">新規作成</button>
 							</th>
 						</tr>
 					</thead>
@@ -32,23 +32,23 @@
 							<td>00001</td>
 							<td><a href= "TeacherSchedule.html">テスト　太郎</a></td>
 							<td>
-								<button type="submit" id="update_button" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TeacherInfo.html'">編集</button>
-								<button type="submit" id="delete_Button" class="btn btn-outline-secondary btn-sm">削除</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="location.href='./TeacherInfo.html'">編集</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="confirm('削除しますか？');">削除</button>
 							</td>
 						<tr>
 							<td>00002</td>
-							<td><a href= "TeacherSchedule.html">テスト　次郎</td>
+							<td><a href= "TeacherSchedule.html">テスト　次郎</a></td>
 							<td>
-								<button type="submit" id="update_button" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TeacherInfo.html'">編集</button>
-								<button type="submit" id="delete_Button" class="btn btn-outline-secondary btn-sm">削除</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="location.href='./TeacherInfo.html'">編集</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="confirm('削除しますか？');">削除</button>
 							</td>
 						</tr>
 						<tr>
 							<td>00003</td>
-							<td><a href= "TeacherSchedule.html">テスト　三郎</td>
+							<td><a href= "TeacherSchedule.html">テスト　三郎</a></td>
 							<td>
-								<button type="submit" id="update_button" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TeacherInfo.html'">編集</button>
-								<button type="submit" id="delete_Button" class="btn btn-outline-secondary btn-sm">削除</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="location.href='./TeacherInfo.html'">編集</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="confirm('削除しますか？');">削除</button>
 							</td>
 						</tr>
 					</tbody>
