--- a/src/main/resources/mock/TrainingList.html
+++ b/src/main/resources/mock/TrainingList.html
@@ -30,28 +30,28 @@
 					<tbody>
 						<tr>
 							<td>00001</td>
-							<td><a href= "Schedule.html">〇〇〇初級科</a><span class="badge bg-danger">講師未割当</span></td>
+							<td><a href= "Timetable.html">〇〇〇初級科</a><span class="badge bg-danger">講師未割当</span></td>
 							<td>yyyy/MM/dd(E) ～ yyyy/MM/dd(E)</td>
 							<td>
-								<button type="submit" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TrainingInfo.html'">編集</button>
-								<button type="submit" class="btn btn-outline-secondary btn-sm">削除</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="location.href='./TrainingInfo.html'">編集</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="confirm('削除しますか？');">削除</button>
 							</td>
 						<tr>
 							<td>00002</td>
-							<td><a href= "Schedule.html" >〇〇〇中級科</a></td>
+							<td><a href= "Timetable.html" >〇〇〇中級科</a></td>
 							<td>yyyy/MM/dd(E) ～ yyyy/MM/dd(E)</td>
 							<td>
-								<button type="submit" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TrainingInfo.html'">編集</button>
-								<button type="submit" class="btn btn-outline-secondary btn-sm">削除</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="location.href='./TrainingInfo.html'">編集</button>
+								<button type="submit" class="btn btn-outline-secondary btn-sm" onclick="confirm('削除しますか？');">削除</button>
 							</td>
 						</tr>
 						<tr>
 							<td>00003</td>
-							<td><a href= "Schedule.html" >〇〇〇上級科</a></td>
+							<td><a href= "Timetable.html" >〇〇〇上級科</a></td>
 							<td>yyyy/MM/dd(E) ～ yyyy/MM/dd(E)</td>
 							<td>
-								<button type="submit" id="update_button" class="btn btn-outline-secondary btn-sm"  onclick="location.href='./TrainingInfo.html'">編集</button>
-								<button type="submit" id="delete_Button" class="btn btn-outline-secondary btn-sm">削除</button>
+								<button type="submit" id="update_button" class="btn btn-outline-secondary btn-sm" onclick="location.href='./TrainingInfo.html'">編集</button>
+								<button type="submit" id="delete_Button" class="btn btn-outline-secondary btn-sm" onclick="confirm('削除しますか？');">削除</button>
 							</td>
 						</tr>
 					</tbody>
