--- a/src/main/resources/mock/TrainingSchedule.html
+++ b/src/main/resources/mock/TrainingSchedule.html
@@ -142,8 +142,8 @@
 		<br>
 		<div class="row center-block text-center">
 			<div class="col-18">
-				<button type="button" class="btn btn-primary btn-block" onclick="location.href='./Schedule.html'">登録</button>
-				<button type="button" class="btn btn-outline-primary btn-block" onclick="location.href='./Schedule.html'">キャンセル</button>
+				<button type="button" class="btn btn-primary btn-block" onclick="location.href='./Timetable.html'">登録</button>
+				<button type="button" class="btn btn-outline-primary btn-block" onclick="location.href='./Timetable.html'">キャンセル</button>
 			</div>
 		</div>
 		<br>
