--- a/src/main/resources/mock/TrainingInfo.html
+++ b/src/main/resources/mock/TrainingInfo.html
@@ -20,35 +20,39 @@
 			<div class="col-md">
 				<form>
 					<div class="input-group mb-3">
-						<span class="input-group-text" id="basic-addon1">ID</span>
+						<span class="input-group-text">ID</span>
 						<input type="text" class="form-control" value="00001" disabled>
 					</div>
 					<div class="input-group mb-3">
-						<span class="input-group-text" id="basic-addon1">訓練名</span>
+						<span class="input-group-text">訓練名</span>
 						<input type="text" class="form-control" placeholder="〇〇〇初級科" />
 					</div>
 					<div class="input-group mb-3">
-						<span class="input-group-text" id="basic-addon1">募集期間</span>
+						<span class="input-group-text">募集期間</span>
 						<input type="date" class="form-control" />　～　
 						<input type="date" class="form-control" />
 					</div>
 					<div class="input-group mb-3">
-						<span class="input-group-text" id="basic-addon1">選考日</span>
+						<span class="input-group-text">選考日</span>
 						<input type="date" class="form-control" />
 					</div>
 					<div class="input-group mb-3">
-						<span class="input-group-text" id="basic-addon1">合格発表</span>
+						<span class="input-group-text">合格発表</span>
 						<input type="date" class="form-control" />
 					</div>
 					<div class="input-group mb-3">
-						<span class="input-group-text" id="basic-addon1">訓練期間</span>
+						<span class="input-group-text">訓練期間</span>
 						<input type="date" class="form-control" />　～　
 						<input type="date" class="form-control" />
 					</div>
 					<div class="input-group mb-3">
-						<span class="input-group-text" id="basic-addon1">授業時間</span>
+						<span class="input-group-text">授業時間</span>
 						<input type="time" class="form-control" />　～　
 						<input type="time" class="form-control" />
+					</div>
+					<div class="input-group mb-3">
+						<span class="input-group-text">授業時間数</span>
+						<input type="number" class="form-control" min="0" max="8" step="0.5" />
 					</div>
 				</form>
 			</div>
