mock修正 ・Navbar追加

--- a/src/main/resources/mock/TeacherList.html
+++ b/src/main/resources/mock/TeacherList.html
@@ -56,8 +56,12 @@
 			</div>
 		</div>
 	</div>
-
-<a href= "TrainingList.html" >訓練一覧画面へ</a>
+	<!-- Navbar -->
+	<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
+		<form class="container-fluid justify-content-start">
+			<button class="btn btn-sm btn btn-outline-light" type="button" onclick="location.href='./TrainingList.html'">訓練一覧へ</button>
+		</form>
+	</nav>
 
 <!-- Optional JavaScript; choose one of the two! -->
 
