--- a/src/main/resources/mock/TrainingList.html
+++ b/src/main/resources/mock/TrainingList.html
@@ -59,9 +59,14 @@
 			</div>
 		</div>
 	</div>
-<br>
-<a href= "TeacherList.html" >講師一覧へ</a>
-<!-- Optional JavaScript; choose one of the two! -->
+	<!-- Navbar -->
+	<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
+		<form class="container-fluid justify-content-start">
+			<button class="btn btn-sm btn btn-outline-light" type="button" onclick="location.href='./TeacherList.html'">講師一覧へ</button>
+		</form>
+	</nav>
+
+	<!-- Optional JavaScript; choose one of the two! -->
 
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
