--- a/src/main/resources/mock/TrainingSchedule.html
+++ b/src/main/resources/mock/TrainingSchedule.html
@@ -46,7 +46,7 @@
 			</tr>
 			<tr class="day">
 				<td class="holiday">3<br>
-					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" disabled />
 				</td>
 				<td>4<br>
 					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
@@ -69,7 +69,7 @@
 			</tr>
 			<tr class="day">
 				<td class="holiday">10<br>
-					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" disabled />
 				</td>
 				<td>11<br>
 					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
@@ -92,10 +92,10 @@
 			</tr>
 			<tr class="day">
 				<td class="holiday">17<br>
-					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" disabled />
 				</td>
 				<td class="nholiday">18<br>
-					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" disabled />
 				</td>
 				<td>19<br>
 					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
@@ -115,7 +115,7 @@
 				</tr>
 			<tr class="day">
 				<td class="holiday">24<br>
-					<input type="number" min="0" max="8" class="inputhours" placeholder="0" />
+					<input type="number" min="0" max="8" class="inputhours" placeholder="0" disabled />
 				</td>
 				<td>25<br>
 					<input type="number" min="0" max="8" class="inputhours" placeholder="6" />
