--- a/src/main/resources/mock/Timetable.html
+++ b/src/main/resources/mock/Timetable.html
@@ -12,12 +12,10 @@
 	<title>訓練時間表</title>
   </head>
   <body>
+  <h5>令和〇年度訓練時間表 【福岡校】(〇月開始コース)(〇ヶ月訓練)　〇〇〇初級科</h5>
     <table class="table  table-bordered">
     <thead>
-    	<tr>
-    		<th colspan='34'>令和〇年度訓練時間表 【福岡校】(〇月開始コース)(〇ヶ月訓練)　〇〇〇初級科</th>
-    	</tr>
-    	<tr>
+     	<tr>
     		<td></td>
     		<td>1</td>
     		<td>2</td>
@@ -472,11 +470,13 @@
 	</tbody>
 	</table>
 
-
-<div class="d-grid gap-2 d-md-block">
-  <button class="btn btn-primary" type="button" onclick="location.href='./TrainingList.html'">訓練一覧へ</button>
-  <button class="btn btn-primary" type="button" onclick="location.href='./TrainingSchedule.html'">訓練スケジュール登録へ</button>
-</div>
+	<!-- Navbar -->
+	<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
+		<form class="container-fluid justify-content-start">
+			<button class="btn btn-sm btn btn-outline-light me-2" type="button" onclick="location.href='./TrainingList.html'">訓練一覧へ</button>
+			<button class="btn btn-sm btn btn-outline-light" type="button" onclick="location.href='./TrainingSchedule.html'">訓練スケジュール登録へ</button>
+		</form>
+	</nav>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
