--- a/src/main/resources/mock/TrainingInfo.html
+++ b/src/main/resources/mock/TrainingInfo.html
@@ -52,7 +52,7 @@
 					</div>
 					<div class="input-group mb-3">
 						<span class="input-group-text">授業時間数</span>
-						<input type="number" class="form-control" min="0" max="8" step="0.5" />
+						<input type="number" class="form-control" min="0" max="8" />
 					</div>
 				</form>
 			</div>
