--- a/src/main/resources/mock/Timetable.html
+++ b/src/main/resources/mock/Timetable.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="init.css">
-<!--	<link th:href="@{/init.css}" rel="stylesheet">-->
+<!--	<link th:href="@{/init2.css}" rel="stylesheet">-->
 
 	<title>訓練時間表</title>
   </head>
